Added /processes query endpoint
